<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/ProfessorTitular" />

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/ProfessorHorista" />
    </RadioGroup>

    <EditText
        android:id="@+id/etHoras"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/Horas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/ValorHora"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAnos"
        app:layout_constraintStart_toStartOf="@+id/etHoras"
        app:layout_constraintTop_toBottomOf="@+id/etHoras" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/Calcular"
        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintEnd_toStartOf="@+id/tvRes"
        app:layout_constraintStart_toStartOf="@+id/tvRes"
        app:layout_constraintTop_toBottomOf="@+id/etAnos" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc" />

    <EditText
        android:id="@+id/etAnos"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/Anos"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintEnd_toEndOf="@+id/etValor"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />
</androidx.constraintlayout.widget.ConstraintLayout>